Update legal docs: more comprehensive, new contact email

--- a/account-deletion.html
+++ b/account-deletion.html
@@ -9,10 +9,28 @@
 <body>
   <div class="container">
     <h1>Account / Data Deletion Request</h1>
-    <p><strong>Tazematik</strong> does not require you to create an account. All users are authenticated anonymously and no personal account information is stored.</p>
-    <h2>Request Data Deletion</h2>
-    <p>If you wish to delete all data associated with your device (including analysis history and quota), please send an email to <a href="mailto:support@tazematik.com?subject=Account%20or%20Data%20Deletion%20Request">support@tazematik.com</a> with the subject “Account or Data Deletion Request”.</p>
-    <p>We will process your request and delete all device-related data from our systems within 7 days.</p>
+    <p><strong>Tazematik</strong> does not require you to create a personal account. All users are authenticated anonymously and no personal account information (such as name, email, or phone number) is stored.</p>
+    <h2>What Data Is Stored?</h2>
+    <ul>
+      <li><strong>Device ID:</strong> Used to manage your free analysis quota and premium status.</li>
+      <li><strong>Analysis History:</strong> Records of your produce analyses (no personal info attached).</li>
+      <li><strong>Purchase Data:</strong> Premium subscription status (no payment details stored).</li>
+    </ul>
+    <h2>How to Request Data Deletion</h2>
+    <ol>
+      <li>Send an email to <a href="mailto:aeroglu2016@gmail.com?subject=Account%20or%20Data%20Deletion%20Request">aeroglu2016@gmail.com</a> with the subject “Account or Data Deletion Request”.</li>
+      <li>Include your device ID (if possible) to help us identify your data.</li>
+    </ol>
+    <h2>What Will Be Deleted?</h2>
+    <ul>
+      <li>All data associated with your device (analysis history, quota, premium status) will be permanently deleted from our systems.</li>
+      <li>Photos are deleted automatically after analysis and are not retained.</li>
+      <li>We cannot recover your data after deletion.</li>
+    </ul>
+    <h2>Timeline</h2>
+    <p>We will process your request and delete all device-related data within 7 days of receiving your email.</p>
+    <h2>Contact</h2>
+    <p>If you have any questions about data deletion, please contact us at <a href="mailto:aeroglu2016@gmail.com">aeroglu2016@gmail.com</a>.</p>
     <footer>
       <p><a href="index.html">&larr; Back to Home</a></p>
       <p>&copy; 2025 Tazematik. All rights reserved.</p>
