--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,39 +10,55 @@
   <div class="container">
     <h1>Privacy Policy</h1>
     <p>Effective Date: July 11, 2025</p>
-    <p><strong>Tazematik</strong> (“we”, “our”, or “us”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use the Tazematik mobile application (“App”).</p>
+    <p><strong>Tazematik</strong> (“we”, “our”, or “us”) is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use the Tazematik mobile application (“App”).</p>
     <h2>1. Information We Collect</h2>
     <ul>
-      <li><strong>Anonymous Usage:</strong> You do not need to create an account to use Tazematik. All users are authenticated anonymously via Firebase.</li>
-      <li><strong>Device Information:</strong> We collect a unique device identifier (device ID) to manage your free analysis quota and prevent abuse.</li>
-      <li><strong>Photos:</strong> When you analyze a fruit or vegetable, the photo you select is uploaded to our secure cloud storage for processing. Photos are not used for any other purpose and are deleted after analysis.</li>
-      <li><strong>Analytics:</strong> We may collect anonymous usage statistics to improve the app (e.g., which features are used most).</li>
+      <li><strong>Anonymous Usage:</strong> You do not need to create an account. All users are authenticated anonymously via Firebase.</li>
+      <li><strong>Device Information:</strong> We collect a unique device identifier (device ID), device type, operating system, and app version for quota management, analytics, and security.</li>
+      <li><strong>Photos:</strong> When you analyze a fruit or vegetable, the photo is uploaded to our secure cloud storage for processing. Photos are deleted after analysis.</li>
+      <li><strong>Usage Data:</strong> We collect information about how you use the App (e.g., features used, analysis count, error logs) to improve our services.</li>
+      <li><strong>Purchase Data:</strong> If you buy a premium subscription, we receive transaction data from the app store (no payment details are stored by us).</li>
     </ul>
-    <h2>2. How We Use Your Information</h2>
+    <h2>2. Cookies & Tracking Technologies</h2>
+    <p>We do not use cookies in the mobile app. However, analytics services may use device identifiers for tracking usage patterns.</p>
+    <h2>3. How We Use Your Information</h2>
     <ul>
-      <li>To provide AI-based produce analysis and manage your analysis quota.</li>
-      <li>To improve app performance and user experience.</li>
-      <li>To prevent abuse and ensure fair use of free analysis rights.</li>
+      <li>To provide and improve AI-based produce analysis.</li>
+      <li>To manage free and premium analysis quotas.</li>
+      <li>To process and fulfill premium subscriptions.</li>
+      <li>To analyze usage and improve app performance.</li>
+      <li>To detect, prevent, and address technical issues or abuse.</li>
     </ul>
-    <h2>3. Data Sharing</h2>
+    <h2>4. Data Sharing & Third Parties</h2>
     <ul>
-      <li>We do <strong>not</strong> share your personal data with third parties.</li>
-      <li>We do <strong>not</strong> use your data for advertising or marketing.</li>
-      <li>We may use third-party analytics (e.g., Firebase Analytics) for anonymous usage statistics.</li>
+      <li>We do <strong>not</strong> sell or share your personal data with advertisers or marketers.</li>
+      <li>We may share anonymous usage data with trusted analytics providers (e.g., Firebase Analytics, RevenueCat).</li>
+      <li>Photos are processed by our cloud AI provider (e.g., OpenAI) for analysis only and are not used for any other purpose.</li>
+      <li>Premium purchases are processed by Google Play or App Store; we do not store payment details.</li>
     </ul>
-    <h2>4. Data Security</h2>
-    <p>We use industry-standard security measures to protect your data, including secure cloud storage and encrypted connections.</p>
-    <h2>5. Data Retention & Deletion</h2>
+    <h2>5. Data Security</h2>
+    <p>We use industry-standard security measures, including encrypted connections (HTTPS), secure cloud storage, and access controls to protect your data.</p>
+    <h2>6. Data Retention & Deletion</h2>
     <ul>
       <li>Photos are deleted after analysis is complete.</li>
-      <li>You can request deletion of your device data by contacting us at <a href="mailto:support@tazematik.com">support@tazematik.com</a>.</li>
+      <li>Device and usage data are retained as long as necessary for quota management and legal compliance.</li>
+      <li>You may request deletion of your device data by emailing <a href="mailto:aeroglu2016@gmail.com">aeroglu2016@gmail.com</a>.</li>
     </ul>
-    <h2>6. Children’s Privacy</h2>
+    <h2>7. Your Rights</h2>
+    <ul>
+      <li>You have the right to access, correct, or delete your data. Contact us at <a href="mailto:aeroglu2016@gmail.com">aeroglu2016@gmail.com</a>.</li>
+      <li>You may opt out of analytics by disabling analytics in your device settings (if available).</li>
+    </ul>
+    <h2>8. Legal Basis for Processing</h2>
+    <p>We process your data to provide the App’s core functionality, fulfill our contractual obligations, and comply with legal requirements.</p>
+    <h2>9. International Data Transfers</h2>
+    <p>Your data may be processed and stored on servers outside your country. We ensure adequate protection for all data transfers.</p>
+    <h2>10. Children’s Privacy</h2>
     <p>Tazematik is not intended for children under 13. We do not knowingly collect personal information from children under 13.</p>
-    <h2>7. Changes to This Policy</h2>
+    <h2>11. Changes to This Policy</h2>
     <p>We may update this Privacy Policy from time to time. Changes will be posted on this page with a new effective date.</p>
-    <h2>8. Contact Us</h2>
-    <p>If you have any questions or requests regarding your privacy, please contact us at <a href="mailto:support@tazematik.com">support@tazematik.com</a>.</p>
+    <h2>12. Contact Us</h2>
+    <p>If you have any questions or requests regarding your privacy, please contact us at <a href="mailto:aeroglu2016@gmail.com">aeroglu2016@gmail.com</a>.</p>
     <footer>
       <p><a href="index.html">&larr; Back to Home</a></p>
       <p>&copy; 2025 Tazematik. All rights reserved.</p>
